<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/no"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/no" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/nama"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/nama" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/alamat"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/alamat" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />
</LinearLayout>