<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/corner_radius"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/border_gray">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/md_biru_radius_atas">

            <TextView
                android:id="@+id/txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                android:text="@string/andamendapat"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textAlignment="center"
                android:textStyle="bold" />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/survey"
            android:textSize="19sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp">

            <TextView

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingBottom="5dp"
                android:paddingLeft="20dp"
                android:text="@string/nama"
                android:textColor="@color/hitamFont"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:text=":"
                android:textColor="@color/hitamFont"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/etNama"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="20dp"
                android:textColor="@color/hitamFont"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingBottom="5dp"
                android:paddingLeft="20dp"
                android:text="@string/alamat"
                android:textColor="@color/hitamFont"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:text=":"
                android:textColor="@color/hitamFont"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/etAlamat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="20dp"
                android:textColor="@color/hitamFont"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/apakahandasetuju"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="15dp"
            >

            <Button
                android:id="@+id/btnYa"
                android:inputType="textCapWords"
                android:text="@string/ya"
                android:layout_margin="5dp"
                android:background="@drawable/border_button_ijo"
                android:layout_width="wrap_content"
                android:layout_height="43sp" />

            <Button
                android:id="@+id/btnTidak"
                android:inputType="textCapWords"
                android:layout_margin="5dp"
                android:text="@string/tidak"
                android:background="@drawable/border_button_maron"
                android:layout_width="wrap_content"
                android:layout_height="43sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>