<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    tools:context="com.winwin.project.winwin.RegestrasiActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical"
            android:paddingTop="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/namadepan"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/namadepan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2.5dp"
                android:background="@drawable/login_material_design"
                android:paddingBottom="4.5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="4dp"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/namablk"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/namabelakang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2.5dp"
                android:background="@drawable/login_material_design"
                android:paddingBottom="4.5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="4dp"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/tgl_lhr"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/tanggal_lhr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2.5dp"
                android:background="@drawable/login_material_design"
                android:focusable="false"
                android:paddingBottom="4.5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="4dp"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/email"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2.5dp"
                android:background="@drawable/login_material_design"
                android:inputType="textEmailAddress"
                android:paddingBottom="4.5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="4dp"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/nohp"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/nomor_hp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2.5dp"
                android:background="@drawable/login_material_design"
                android:inputType="number"
                android:paddingBottom="4.5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="4dp"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/passw"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtUsername"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/Password"
                    android:layout_width="match_parent"
                    android:layout_height="35sp"
                    android:background="@drawable/login_material_design"
                    android:inputType="textPassword"
                    android:paddingBottom="4.5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="4dp"
                    android:textSize="15sp" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/conf_pass"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtUsername"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/ConfPassword"
                    android:layout_width="match_parent"
                    android:layout_height="35sp"
                    android:background="@drawable/login_material_design"
                    android:inputType="textPassword"
                    android:paddingBottom="4.5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="4dp"
                    android:textSize="15sp" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnDaftar"
                android:layout_width="match_parent"
                android:layout_height="37sp"
                android:layout_marginTop="25dp"
                android:background="@drawable/ripple_effect"
                android:text="@string/daftar"
                android:textColor="@color/blue"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/sudahpunyakun"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/link_back_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textStyle="italic"
                    />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>

