<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/bg_login"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingBottom="40dp"
    tools:context="com.winwin.project.winwin.LoginPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_alignParentTop="true">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/logo_splash" />

        <EditText
            android:id="@+id/txtUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/login_material_design"
            android:drawableLeft="@drawable/drawableleft_u"
            android:elevation="5dp"
            android:hint="Username"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:inputType="text"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtUsername"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:background="@drawable/login_material_design"
                android:drawableStart="@drawable/drawableleft_p"
                android:hint="Password"
                android:inputType="textPassword"
                android:paddingBottom="5dp"
                android:paddingLeft="20dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/til"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/ripple_effect"
            android:elevation="10dp"
            android:text="@string/login"
            android:textColor="@color/blue" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/belumpunyaakun"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/link_daftar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/daftar"
                android:textColor="@color/white"
                android:textStyle="italic" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
