<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/toolbar"
    android:orientation="vertical"
    tools:context="com.winwin.project.winwin.KomisiActivity">

    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:scaleType="fitXY"
            android:src="@drawable/headeratas" />

        <ImageView
            android:layout_width="90dp"
            android:layout_height="49dp"
            android:src="@drawable/logo2" />

        <ImageView
            android:id="@+id/ic_home"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="10dp"
            android:padding="5dp"
            android:src="@drawable/home" />

    </RelativeLayout>

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/toolbar"
        android:elevation="2dp"
        android:minHeight="?attr/actionBarSize">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ic_logo_client"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@drawable/coins" />

            <TextView
                android:id="@+id/hm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/ic_logo_client"
                android:text="@string/komisi"
                android:textColor="@color/blue"
                android:textSize="18dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:src="@drawable/back" />

            <TextView
                android:id="@+id/id_client"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/hm"
                android:visibility="gone" />

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/Tahapan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_dropdown"
            android:entries="@array/german_familienname" />

        <Button
            android:id="@+id/btnTampil"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignEnd="@+id/relativedetail"
            android:layout_below="@+id/txtnilaikomisi"
            android:layout_marginTop="20dp"
            android:background="@drawable/ripple_effect_biru"
            android:paddingBottom="5dp"
            android:paddingEnd="30dp"
            android:paddingStart="30dp"
            android:paddingTop="5dp"
            android:text="@string/tampil"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="12dp" />

        <Button
            android:id="@+id/btnHistory"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignEnd="@+id/relativedetail"
            android:layout_below="@+id/txtnilaikomisi"
            android:layout_marginTop="20dp"
            android:background="@drawable/ripple_effect_biru"
            android:paddingBottom="5dp"
            android:paddingEnd="30dp"
            android:paddingStart="30dp"
            android:paddingTop="5dp"
            android:text="@string/historyko"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="12dp" />

    </LinearLayout>
</LinearLayout>
